demo-bootstrap/examples/demo-application/manifests/catalog/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: catalog
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ui
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: mysql
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: catalog
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
